fix: use network_mode host to fix connection hangs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "33005:3000"
+    network_mode: host
     environment:
       - NODE_ENV=production
     restart: always
