--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 services:
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    network_mode: host
-    environment:
-      - NODE_ENV=production
+    build: .
+    ports:
+      - "38801:3000"
     restart: always
