fix: set network MTU to 1400 for institutional network compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,11 @@ services:
     ports:
       - "38801:3000"
     restart: always
+    networks:
+      - bun_net
+
+networks:
+  bun_net:
+    driver: bridge
+    driver_opts:
+      com.docker.network.driver.mtu: 1400
